# not_in_kansas

./: README.md  component_development_plan.md  context.json  exceptions.py  github_client.py  main.py  models.md  openai_client.py  prompt.txt  pyproject.toml  repo_processor.py  status_enums.py  test  test_runner.py
fixtures/llm_responses/: componentb_response.json
old/: test_repo_processor.py
tests/: context.json  prompt.txt  prompt_general.txt  prompt_original.txt  test_integration.py  test_repo_processor.py
tests/fixtures/componenta/: pom.xml
tests/fixtures/componentb/: pom.xml
tests/fixtures/componentc/: pom.xml  project.json
tests/fixtures/componentd/: pom.xml
tests/fixtures/componente/: pom.xml  run
tests/fixtures/expected_updates/componenta/: pom.xml  project.json  run
tests/fixtures/expected_updates/componentb/: pom.xml  project.json  run
tests/fixtures/expected_updates/componentc/: pom.xml  project.json  run
tests/fixtures/expected_updates/componentd/: pom.xml  project.json  run
tests/fixtures/expected_updates/componente/: pom.xml  project.json  run
